--- a/hoseungshop/src/main/resources/application.properties
+++ b/hoseungshop/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+
+spring.datasource.username=root
+spring.datasource.password=tnls!0852
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/shdb_local?serverTimezone=UTC&allowPublicKeyRetrieval=true
