시큐리티 로그인 성공 실패 커스터마이징, log4jdbc 설정

--- a/hoseungshop/pom.xml
+++ b/hoseungshop/pom.xml
@@ -73,6 +73,19 @@
 		  <artifactId>spring-security-test</artifactId>
 		  <scope>test</scope>
 		</dependency>
+		
+		<dependency> 
+			<groupId>org.bgee.log4jdbc-log4j2</groupId> 
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId> 
+			<version>1.16</version> 
+		</dependency>
+
+        <!-- logback -->
+        <dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.2.3</version>
+		</dependency>
 
 	</dependencies>
 
